--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,6 +1,6 @@
-preload = /home/joan/.Wallpaper/fierwatchWallpaper.jpg
+preload = ~/.Wallpaper/fierwatchWallpaper.jpg
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper =  , /home/joan/.Wallpaper/fierwatchWallpaper.jpg
+wallpaper =  , ~/.Wallpaper/fierwatchWallpaper.jpg
 
 
 #enable splash text rendering over the wallpaper
