--- a/hyprland.conf
+++ b/hyprland.conf
@@ -51,6 +51,9 @@ exec-once = wl-clipboard-history -t
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = gBar bar 0
+exec-once = blueman-applet
+exec-once = nm-applet
 
 #############################
 ### ENVIRONMENT VARIABLES ###
