--- a/hyprland.conf
+++ b/hyprland.conf
@@ -35,7 +35,7 @@ exec-once = hyprpaper
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = nautilus
+$fileManager = thunar
 $webBrowser = firefox 
 #$menu = wofi --show drun
 
