--- a/hyprland.conf
+++ b/hyprland.conf
@@ -54,6 +54,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = gBar bar 0
 exec-once = blueman-applet
 exec-once = nm-applet
+exec-once = dunst
 
 #############################
 ### ENVIRONMENT VARIABLES ###
