--- a/assets/hyprland/hyprland.conf
+++ b/assets/hyprland/hyprland.conf
@@ -37,7 +37,7 @@ exec-once = hyprpaper
 $terminal = alacritty
 $fileManager = thunar
 $webBrowser = firefox 
-#$menu = wofi --show drun
+$menu = ulauncher
 
 
 #################
@@ -51,9 +51,10 @@ exec-once = wl-clipboard-history -t
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = gBar bar 0
+exec-once = waybar
+#exec-once = gBar bar 0
 exec-once = blueman-applet
-exec-once = nm-applet
+exec-once = nm-applet --indicator
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -73,8 +74,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 10
+    gaps_out = 7,10,5,10
 
     border_size = 2
 
@@ -98,7 +99,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.97
 
     drop_shadow = true
     shadow_range = 4
@@ -145,7 +146,7 @@ master {
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    #disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -199,17 +200,17 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, exec, $webBrowser
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, L, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 
-bind = ,XF86AudioMute, exec, $terminal
-bind = ,XF86AudioLowerVolume, exec, $terminal
-bind = ,XF86AudioRaiseVolume, exec, $terminal
+bind = ,XF86AudioMute, exec, audio-brightness-mgr -v mute
+bind = ,XF86AudioLowerVolume, exec, audio-brightness-mgr -v down
+bind = ,XF86AudioRaiseVolume, exec, audio-brightness-mgr -v up
 
-bind = ,XF86MonBrightnessUp, exec, $terminal
-bind = ,XF86MonBrightnessDown, exec, $terminal
+bind = ,XF86MonBrightnessUp, exec, audio-brightness-mgr -b up
+bind = ,XF86MonBrightnessDown, exec, audio-brightness-mgr -b down
 
 
 bind = ,XF86FullScreen, exec, $terminal
@@ -272,3 +273,8 @@ bindm = $mainMod, mouse:273, resizewindow
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrulev2 = noblur, class:^(xwaylandvideobridge)$
