--- a/assets/hyprland/hyprland.conf
+++ b/assets/hyprland/hyprland.conf
@@ -25,6 +25,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1
 exec-once = hyprpaper
+exec-once = ulauncher
 
 
 ###################
@@ -37,7 +38,7 @@ exec-once = hyprpaper
 $terminal = alacritty
 $fileManager = thunar
 $webBrowser = firefox 
-$menu = ulauncher
+$menu = ulauncher-toggle
 
 
 #################
@@ -200,7 +201,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, exec, $webBrowser
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, L, exec, $menu
+bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
