--- a/assets/hyprland/hyprland.conf
+++ b/assets/hyprland/hyprland.conf
@@ -25,7 +25,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1
 exec-once = hyprpaper
-exec-once = ulauncher
+exec-once = ulauncher --hide-window
 
 
 ###################
@@ -36,7 +36,7 @@ exec-once = ulauncher
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = thunar
+$fileManager = nautilus
 $webBrowser = firefox 
 $menu = ulauncher-toggle
 
