--- a/assets/waybar/config.jsonc
+++ b/assets/waybar/config.jsonc
@@ -12,7 +12,7 @@
 
 "modules-left": ["hyprland/workspaces","custom/spacer","wlr/taskbar","hyprland/window"],
 "modules-center": ["clock"],
-"modules-right": ["tray","network",
+"modules-right": ["tray",
     "group/audio", 
     "group/backlight", 
     "group/battery", 
@@ -49,9 +49,10 @@
 },
 
 "clock": {
-  "format": "{:%H:%M %d/%m/%y}",
+  "format": "{:%H:%M - %d/%m/%y}",
   "rotate": 0,
   "tooltip-format": "<tt>{calendar}</tt>",
+  "locale": "es_ES.utf8",
   "calendar": {
     "mode": "month",
     "mode-mon-col": 3,
@@ -69,9 +70,9 @@
 },
 
 "tray": {
-  "icon-size": 16,
+  "icon-size": 23,
   "rotate": 0,
-  "spacing": 3
+  "spacing": 6
 },
 
 "network": {
